# aegisub-cli

./: .gitignore  README.md  meson.build  meson_options.txt
automation/: meson.build
libaegisub/: meson.build
libaegisub/common/: dispatch.cpp  log.cpp  mru.cpp
libaegisub/include/libaegisub/: format.h  format_path.h  log.h
libaegisub/unix/: log.cpp  path.cpp
libaegisub/windows/: log_win.cpp
src/: aegisublocale.cpp  aegisublocale.h  ass_file.cpp  ass_file.h  ass_style.cpp  ass_style.h  async_video_provider.cpp  async_video_provider.h  auto4_base.cpp  auto4_base.h  auto4_lua.cpp  auto4_lua.h  auto4_lua_assfile.cpp  auto4_lua_dialog.cpp  auto4_lua_progresssink.cpp  charset_detect.cpp  context.cpp  dialog_progress.cpp  dialog_progress.h  export_fixstyle.cpp  export_fixstyle.h  ffmpegsource_common.cpp  ffmpegsource_common.h  main.cpp  main.h  meson.build  options.h  project.cpp  project.h  resolution_resampler.cpp  resolution_resampler.h  subs_controller.cpp  subs_controller.h  subtitle_format.cpp  subtitle_format.h  utils.cpp  utils.h  video_controller.cpp  video_controller.h  video_frame.cpp  (+3 more)
src/command/: command.cpp  command.h
src/include/: agi_pre.h  agi_pre_c.h
src/include/aegisub/: context.h
src/libresrc/: libresrc.cpp  libresrc.h  meson.build
src/res/: res.rc
subprojects/: zlib.wrap
subprojects/packagefiles/boost/libs/chrono/: meson.build
subprojects/packagefiles/boost/libs/filesystem/: meson.build
subprojects/packagefiles/boost/libs/regex/: meson.build
subprojects/packagefiles/boost/libs/thread/: meson.build
subprojects/packagefiles/ffms2/: meson.build
subprojects/packagefiles/icu/source/: meson.build
subprojects/packagefiles/icu/source/common/: meson.build
subprojects/packagefiles/icu/source/data/: generate_icupkg_inc.py
subprojects/packagefiles/icu/source/i18n/: meson.build
subprojects/packagefiles/icu/source/io/: meson.build
subprojects/packagefiles/icu/source/tools/toolutil/: meson.build
tools/: version.ps1  version.sh
