option('ffms2', type: 'feature', description: 'FFMS2 video source')

option('uchardet', type: 'feature', description: 'uchardet character encoding detection')

option('system_luajit', type: 'boolean', value: false, description: 'Force using system luajit')

option('icu_path', type: 'string', value: '', description: 'Path to ICU libraries on Windows')
option('wx_path', type: 'string', value: '', description: 'Path to wxWidgets libraries on Windows')

option('credit', type: 'string', value: '', description: 'Build credit shown in program title')

option('build_osx_bundle', type: 'boolean', value: 'false', description: 'Package Aegisub.app on OSX')
