option('ffms2', type: 'feature', description: 'FFMS2 video source')
option('uchardet', type: 'feature', description: 'uchardet character encoding detection')

option('system_luajit', type: 'boolean', value: false, description: 'Force using system luajit')

option('local_boost', type: 'boolean', value: false, description: 'Force using locally compiled Boost')

option('wx_path', type: 'string', value: '', description: 'Path to wxWidgets libraries on Windows')

option('credit', type: 'string', value: '', description: 'Build credit shown in program title')

option('portable_build', type: 'boolean', value: false, description: 'Build and install a portable version of Aegisub CLI')
